Baseline vertical spacing fixes.

--- a/css/careers.css
+++ b/css/careers.css
@@ -34,7 +34,7 @@
     .mainNav__group {
         /*background: center 100% repeat-y url(../img/grid.png) #eee;*/
         background-color:#eee;
-        border-bottom:0.125rem solid #c6c6c6; height:5.8125rem; 
+        border-bottom:0.125rem solid #c6c6c6; height:6.0625rem; 
     }
         .mainNav__container{
             margin:0 25%;
@@ -66,7 +66,7 @@
         }
             .content__title {
                 font-weight:500; font-size:1.75em; color:#626262; 
-                padding:0 0.5em; margin-bottom:1.025em;
+                padding:0 0.5em; margin:0 0 1.15em 0;
             }
             .content__copy {
                 font-size:1rem; color:#626262; line-height:1.75em; 
@@ -86,7 +86,7 @@
             margin:0 12%;
         }
         .content__group {
-        padding:3.3rem 0 20.9375rem 0;
+        padding:3.3rem 0 21rem 0;
         }
     }
     @media screen and (min-width: 800px) and (max-width: 1499px) {
@@ -97,7 +97,7 @@
             margin:0 5%; padding:0 1em;
         }
         .content__group {
-            padding:3.3rem 0 10.9375rem 0;
+            padding:3.3rem 0 11rem 0;
         }
     }
 
@@ -112,7 +112,7 @@
             margin:0; padding:0 0.25em;
             }
         .content__group {
-            padding:3.3rem 0 10.9375rem 0;
+            padding:3.3rem 0 11.25rem 0;
         }
     }
     @media screen and (max-width: 602px) {
@@ -132,7 +132,7 @@
                         margin:1.8em 1em 0em 0; 
                     }
             .content__group {
-                padding:0 0 1.9375em 0; font-size:0.75rem;
+                padding:0 0 5em 0; font-size:0.75rem;
             }
                 .content__container{
                     margin:0 5%;
@@ -146,7 +146,7 @@
     .footer__group {
          /*background: center 100% repeat-y url(../img/grid.png) #fff;*/
         background-color:#eee; border-top: 0.125rem solid #c6c6c6; /* 1em */
-        padding:2.25rem 25%; margin:0; line-height:1.5em; /* line-height:24px */
+        padding:2.3125rem 25%; margin:0; line-height:1.5em; /* line-height:24px */
         font-family: 'MuseoSans', Arial, Helvetica, sans-serif;
     }
         .footer__container {
@@ -220,7 +220,7 @@
                 width:47%; margin:0 0 5.5rem 3%;
             }
             .footer__careers {
-                width:100%; margin:0 0 4rem 0;
+                width:100%; margin:0 0 3.875rem 0;
             }
         .footer__legalCopy {
             font-size:0.75rem; line-height:1.5em; margin:0 22%;
